cluster/apps/splunk-cluster/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-splunk-ingress
  namespace: splunk-cluster-dev
  labels:
    app: cluster-splunk-ingress
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "cluster"
    hajimari.io/enable: "true"
    hajimari.io/icon: "table-search"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "cluster.${SECRET_DOMAIN}"
      secretName: "cluster-splunk-ingress-tls"
  rules:
    - host: "cluster.${SECRET_DOMAIN}"
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: service/splunk-sh-dev-search-head-service
                port:
                  number: 8000
